<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/ET_primero"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:hint="Ingrese el primer texto a comparar">
    </EditText>

    <EditText
        android:id="@+id/ET_segundo"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:hint="Ingrese el segundo texto a comparar">
    </EditText>

    <Button
        android:id="@+id/BTN_comparar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comparar"
        android:layout_gravity="center"
        android:layout_margin="10dp">
    </Button>
    <TextView
        android:id="@+id/TV_resultado"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    </TextView>

</LinearLayout>